Expression, UpdatableExpression, ExpressionContext, base implementations
NullValueExpression, TypeExpression, ConstantExpression, Keywords, test
for Expression implementations.